# Liqudity-pool-RL

./: README.md  gui.py  play.py  pyproject.toml  recherche.ipynb  train.py
Doc/: make_plan_pdf.py  project_plan.md
checkpoints_rllib/: algorithm_state.pkl  rllib_checkpoint.json
poker_env/: __init__.py  env.py  evaluator.py  game.py  model.py  observation.py
