[project]
name = "rl-group-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nbconvert>=7.17.0",
    "pypdf>=6.7.4",
    "ray[rllib]>=2.54.0",
    "reportlab>=4.4.10",
    "torch>=2.10.0",
    "treys>=0.1.8",
]
